src/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app: example
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
