src/base/ingress.yaml
#apiVersion: networking.k8s.io/v1  # Kubernetes 1.18
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # Kubernetes 1.18
  # defaultBackend: 
  #   service:
  #     name: dev-example-svc
  #     port: 80
  backend: 
    serviceName: dev-example-svc
    servicePort: 80
  rules:
  - host: test.devsecol.site
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-example-svc
            port:
              number: 80
  - http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: dev-example-svc
            port:
              number: 80
